--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/proyecto_biblioteca?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=curso1234
+spring.datasource.password=Skateboard1722001
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
