--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#spring.datasource.url = jdbc:mysql://localhost:3306/proyecto_biblioteca?createDatabaseIfNotExist=true
-spring.datasource.url = jdbc:mysql://localhost:3306/test_biblioteca?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/proyecto_biblioteca?createDatabaseIfNotExist=true
+#spring.datasource.url = jdbc:mysql://localhost:3306/test_biblioteca?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=curso1234
+spring.datasource.password=Skateboard1722001
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.security=DEBUG
